# rusty_winapi

./: .gitignore  Cargo.toml  README.md
src/: auto_bstr.rs  auto_com_interface.rs  lib.rs  smart_iclassfactory.rs  smart_idispatch.rs  smart_iunknown.rs  smart_variant.rs
src/safe/: bstr.rs  mod.rs
