[package]
name = "rusty_winapi"
version = "0.1.1"
authors = ["Alexey V. Litvinov <lialsoftlab@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "Various rustified  WinAPI's for pleasant and safe use with Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["impl-default", "oleauto",] }
