[package]
name = "rusty_winapi"
repository = "https://github.com/lialsoftlab/rusty_winapi"
documentation = "https://docs.rs/rusty_winapi/"
version = "0.1.1"
authors = ["Alexey V. Litvinov <lialsoftlab@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "Various rustified  WinAPI's for pleasant and safe use with Rust."
readme="README.md"
categories=["api-bindings", "os::windows-apis",]
keywords = ["winapi", "win32", "OLE", "COM",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["impl-default", "oleauto",] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"